# atcoder-tools-mini

./: .gitignore  README.md
cli/: install_native.py  manifest_win.json  native_host.bat  native_host.py  pyproject.toml  test_server.py
cli/atcoder_tools_mini/: __init__.py  gen.py  lang_map.py  main.py  submit.py  test.py
extension/: background.js  manifest.json
extension/content/: dropdown-modify.js
